--- a/login/index.html
+++ b/login/index.html
@@ -12,6 +12,22 @@
   </head>
   <body>
     <div id="root">
+      <main>
+        <h1>Sign in :)</h1>
+        <h3>Hi there! Nice to see you again</h3>
+        <form>  
+            <div class="container">   
+                <label>Username : </label>   
+                <input type="text" placeholder="Enter Username" name="username" required>  
+                <label>Password : </label>   
+                <input type="password" placeholder="Enter Password" name="password" required>  
+                <button type="submit" class="btn">Login</button>   
+                <input type="checkbox" checked="checked"> Remember me   
+                <button type="button" class="btn"> Cancel</button>   
+                Forgot <a href="#"> password? </a>   
+            </div>   
+        </form>    
+    </main>
 
     </div>
   </body>
