border equal to layout

--- a/login/index.html
+++ b/login/index.html
@@ -19,13 +19,13 @@
         </div>
         <h1>Sign In</h1>
         <h3>Hi there! Nice to see you again :)</h3>
-        <form>  
+        <form onsubmit="//Daten an Backend">  
             <div class="container">   
                 <label><strong>Email</strong> </label>   
                 <input type="text" placeholder="email@example.com" name="email" required>  
                 <label><strong>Password</strong></label>   
                 <input id="myPwd" type="password" placeholder="Enter Password" name="password" required>
-                <input type="checkbox" onclick="myFunction()">Show Password 
+                <input type="checkbox" onclick="myFunction()">Remember Me
                 <div class="center-btn">
                   <button type="submit" class="btn">Sign In</button>   
                 </div>
