--- a/login/index.html
+++ b/login/index.html
@@ -15,26 +15,23 @@
     <div id="root">
       <main>
         <div class="center-img">
-          <img src="006-vacations.png" alt="Girl in a jacket" width="200" height="210">
+          <img src="006-vacations.png" alt="Girl in a jacket" width="200" height="210" />
         </div>
         <h1>Sign In</h1>
         <h3>Hi there! Nice to see you again :)</h3>
-        <form onsubmit="//Daten an Backend">  
-            <div class="container">   
-                <label><strong>Email</strong> </label>   
-                <input type="text" placeholder="email@example.com" name="email" required>  
-                <label><strong>Password</strong></label>   
-                <input id="myPwd" type="password" placeholder="Enter Password" name="password" required>
-                <input type="checkbox" onclick="myFunction()">Remember Me
-                <div class="center-btn">
-                  <button type="submit" class="btn">Sign In</button>   
-                </div>
-                <!-- <input type="checkbox" checked="checked"> Remember me -->   
-                <!-- <a href="#">Forgot password?</a> -->
-            </div>   
-        </form>    
-    </main>
-
+        <form onsubmit="//send values to backend and preventDefault">
+          <div class="container">
+            <label>Email</label>
+            <input id="emailInput" type="text" placeholder="email@example.com" name="email" required />
+            <label>Password</label>
+            <input id="pwdInput" type="password" placeholder="Enter Password" name="password" required />
+            <label><input type="checkbox"">Remember Me</label>
+            <div class="center-btn">
+              <button type="submit" class="btn">Sign In</button>
+            </div>
+          </div>
+        </form>
+      </main>
     </div>
   </body>
 </html>
