--- a/login/register.html
+++ b/login/register.html
@@ -17,13 +17,9 @@
         <div class="center-img">
             <img src="006-vacations.png" alt="Girl in a jacket" width="200" height="210"/>
         </div>
-        <div id="headertext"><h1>Register</h1>
+        <div id="headertext"><h1>  Register</h1>
             <h3>Let's get you enrolled :)</h3>
-            <label class="switch">
-                <input type="checkbox">
-                <span class="slider round"> </span>
-            </label>
-            Already have an account
+
         </div>
         <form onsubmit="//send values to backend and preventDefault">
             <div class="container">
@@ -33,13 +29,20 @@
                 <input id="pwdInput" type="password" placeholder="Enter Password" name="password" required/>
                 <label for="role">Role</label>
                 <select name="role" id="role">
-                    <option value="user" selected>User</option>
+                    <option value="" selected disabled >Choose your role </option>
+                    <option value="user" >User</option>
                     <option value="manager">Manager</option>
                     <option value="admin">Admin</option>
                 </select>
                 <div class="center-btn">
                     <button type="submit" class="btn">Sign up</button>
                 </div>
+            </div>
+            <p>Already have an account</p>
+            <div id="switch"><label class="switch">
+                <input type="checkbox">
+                <span class="slider round"> </span>
+            </label>
             </div>
         </form>
     </main>
