--- a/login/register.html
+++ b/login/register.html
@@ -17,8 +17,13 @@
         <div class="center-img">
             <img src="006-vacations.png" alt="Girl in a jacket" width="200" height="210"/>
         </div>
-        <div id="headertext"><h1>  Register</h1>
+        <div id="register-header"><h1> Register</h1>
             <h3>Let's get you enrolled :)</h3>
+
+        </div>
+        <div id="login-header"><h1> Login</h1>
+            <h3>
+                Hi there! Nice to see you again :)            </h3>
 
         </div>
         <form onsubmit="//send values to backend and preventDefault">
@@ -27,23 +32,25 @@
                 <input id="emailInput" type="email" placeholder="email@example.com" name="email" required/>
                 <label for="pwdInput">Password</label>
                 <input id="pwdInput" type="password" placeholder="Enter Password" name="password" required/>
-                <label for="role">Role</label>
+                <label for="role" id="role-label">Role</label>
                 <select name="role" id="role">
-                    <option value="" selected disabled >Choose your role </option>
-                    <option value="user" >User</option>
+                    <option value="" selected disabled>Choose your role</option>
+                    <option value="user">User</option>
                     <option value="manager">Manager</option>
                     <option value="admin">Admin</option>
                 </select>
                 <div class="center-btn">
-                    <button type="submit" class="btn">Sign up</button>
+                    <button type="submit" class="btn" id="submit-button">Sign up</button>
                 </div>
             </div>
             <p>Already have an account</p>
             <div id="switch"><label class="switch">
-                <input type="checkbox">
+                <input type="checkbox" id="switch-value" onchange="toggle()">
                 <span class="slider round"> </span>
             </label>
             </div>
+
+
         </form>
     </main>
 </div>
