added forget password btn

--- a/login/index.html
+++ b/login/index.html
@@ -23,11 +23,20 @@
             <label>Email</label>
             <input id="emailInput" type="text" placeholder="email@example.com" name="email" required />
             <label>Password</label>
-            <input id="pwdInput" type="password" placeholder="Enter Password" name="password" required />
-            <label><input type="checkbox"">Remember Me</label>
-            <div class="center-btn">
-              <button type="submit" class="btn">Sign In</button>
+            <div class="pwd">
+              <input id="pwdInput" type="password" placeholder="Enter Password" name="password" required />
+              <button class="btn-pwd">Forgot Password</button>
             </div>
+            <label><input type="checkbox">Remember Me</label>
+            <div class="center-btn">
+              <button type="submit" class="learn-more">
+                <span class="circle" aria-hidden="true">
+                <span class="icon arrow"></span>
+                </span>
+                <span class="button-text">Sign In</span>
+              </button>
+            </div>
+            
           </div>
         </form>
       </main>
