correct var name

--- a/login/index.html
+++ b/login/index.html
@@ -29,7 +29,7 @@
             </div>
             <label><input type="checkbox">Remember Me</label>
             <div class="center-btn">
-              <button type="submit" class="learn-more">
+              <button type="submit" class="sign-in">
                 <span class="circle" aria-hidden="true">
                 <span class="icon arrow"></span>
                 </span>
