button to access new vacation page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
           <h2>Anträge</h2>
         </segment>
       </div>
+      <button id="newVacationBtn" onclick="location.href = '/new_vacation'">
+        <span class="material-icons"> add </span>
+      </button>
     </div>
   </body>
 </html>
