include dbg call in display for now, so we need less changes later

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
   <body>
     <div id="root">
       <div id="topbar">
-        <span class="material-icons" onclick="VacationView.dbg() //just for demonstration purposes">
-          flight_takeoff
-        </span>
-        <span class="material-icons" onclick="VMView.dbg() //just for demonstration purposes"> dvr </span>
+        <span class="material-icons" onclick="VacationView.display()">flight_takeoff</span>
+        <span class="material-icons" onclick="VMView.display()">dvr</span>
       </div>
       <div id="content">
         <h1></h1>
@@ -42,3 +40,4 @@
   <div class="card">
     <!-- card info template goes here -->
   </div>
+</template>
