Add min value to number_urlaubstage

--- a/urlaubsantrag-stellen/index.html
+++ b/urlaubsantrag-stellen/index.html
@@ -29,7 +29,7 @@
                 <br>
                 <br>
                 <label>Anzahl Urlaubstage:</label>
-                <input id="number_urlaubstage" type="number" readonly="true" value=0 style="width: 3em; background-color: #fff0e2; border-color: transparent; color: grey;" >
+                <input id="number_urlaubstage" type="number" readonly="true" value=0 min="0" style="width: 3em; background-color: #fff0e2; border-color: transparent; color: grey;" >
                 <br>
                 <br>
                 <input id="checkbox_gleitzeit" type="checkbox" onchange="toggleGleitzeit()"> <label for="gleitzeit">Gleitzeit</label>
