correct information field in bedarf

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <script src="js/vacation.js" defer></script>
-    <script src="js/bedarf.js" defer></script>
+    <script src="js/misc.js"></script>
+    <script src="js/vacation.js"></script>
+    <script src="js/bedarf.js"></script>
     <script src="js/main.js" defer></script>
     <title>Self-Service</title>
   </head>
