--- a/index.html
+++ b/index.html
@@ -20,9 +20,22 @@
     </script>
     <div id="root">
       <div id="topbar">
-        <span class="material-icons" onclick="VacationView.display()">flight_takeoff</span>
-        <span class="material-icons" onclick="VMView.display()">dvr</span>
+        <div class="intopbar">
+          <span class="material-icons" onclick="VacationView.display()">flight_takeoff</span>
+          <a>Urlaub</a>
+        </div>
+        <div class="intopbar">
+          <span class="material-icons" onclick="VMView.display()">dvr</span>
+          <a>Bedarf</a>
+        </div>
+        <div class="intopbar">
+          <span class="material-icons" onclick="PermView.display()">approval</span>
+          <a>Genehmigung</a>
+        </div>
+        <span class="material-icons" onclick="window.location.href = 'login/index.html';" >logout</span> 
       </div>
+      
+      
       <div id="content">
         <h1></h1>
         <segment id="available">
