--- a/login/index.html
+++ b/login/index.html
@@ -27,10 +27,14 @@
         </div>
         <form onsubmit="//send values to backend and preventDefault">
             <div class="container">
+                <label for="nameInput">Name</label>
+                <input id="nameInput" type="name" placeholder="Vorname Nachname" name="name" required/>
                 <label for="emailInput">Email</label>
                 <input id="emailInput" type="email" placeholder="email@example.com" name="email" required/>
                 <label for="pwdInput">Password</label>
                 <input id="pwdInput" type="password" placeholder="Enter Password" name="password" required/>
+                <label for="pwdconfirmationInput">Password</label>
+                <input id="pwdconfirmationInput" type="password" placeholder="Confirm Password" name="password_confirmation" required/>
                 <label for="role" id="role-label">Role</label>
                 <select name="role" id="role">
                     <option value="" selected disabled>Choose your role</option>
