--- a/login/index.html
+++ b/login/index.html
@@ -29,7 +29,7 @@
                     Hi there! Nice to see you again :) </h3>
 
             </div>
-            <form onsubmit="//send values to backend and preventDefault">
+            <form onsubmit="onSubmitPress()">
                 <div class="container">
                     <label for="nameInput" id="name-label">Name</label>
                     <input id="nameInput" type="name" placeholder="Vorname Nachname" name="name" required/>
