Add id to form to get information in js

--- a/login/index.html
+++ b/login/index.html
@@ -28,7 +28,7 @@
                     Hi there! Nice to see you again :) </h3>
 
             </div>
-            <form onsubmit="onSubmitPress()">
+            <form onsubmit="onSubmitPress()" id="thisform">
                 <div class="container">
                     <label for="nameInput" id="name-label">Name</label>
                     <input id="nameInput" type="name" placeholder="Vorname Nachname" name="name" required/>
