--- a/login/index.html
+++ b/login/index.html
@@ -46,11 +46,12 @@
                     <option value="manager">Manager</option>
                     <option value="admin">Admin</option>
                 </select>
+                    <p id="errors"></p>
                     <div class="center-btn">
                         <button type="submit" class="btn" id="submit-button">Sign up</button>
                     </div>
                 </div>
-                <p>Already have an account</p>
+                <p>Already have an account?</p>
                 <div id="switch"><label class="switch">
                 <input type="checkbox" id="switch-value" onchange="toggle()">
                 <span class="slider round"> </span>
