Now showing pending requests and available VMs in VM view. (Fetching both)
Added new segment with id "available-vms". Added showAvailableVMs function in bedarf.js and hideAvailableVMs function in vacation.js.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
           <h2>Verfügbar</h2>
           <h3>0 Tage</h3>
         </segment>
+        <segment id="available-vms">
+          <h2>Verfügbare VMs</h2>
+        </segment>
         <segment id="requests">
           <h2>Anträge</h2>
         </segment>
