--- a/urlaubsantrag-stellen/index.html
+++ b/urlaubsantrag-stellen/index.html
@@ -13,7 +13,7 @@
 <div id="root">
     <main>
         <div class="center-img">
-            <img src="../login/006-vacations.png" alt="Urlaubsfoto" width="200" height="210"/>
+            <img src="../media/006-vacations.png" alt="Urlaubsfoto" width="200" height="210"/>
         </div>
         <div id="register-header"><h1>Urlaub beantragen</h1>
 
