Revert "Moved icons"
This reverts commit 7769c0b005cb23dc25c0599d6f3d7b0284f1daaf.

--- a/new_vm/index.html
+++ b/new_vm/index.html
@@ -14,7 +14,7 @@
 <div id="root">
     <main>
         <div class="center-img">
-            <img src="../media/vm.png" alt="VirtualMachineFoto" width="200" height="210">
+            <img src="../login/vm.png" alt="VirtualMachineFoto" width="200" height="210">
 
         </div>
         <div id="request-header"><h2>Neue VM beantragen</h2></div>
