--- a/login/index.html
+++ b/login/index.html
@@ -14,7 +14,7 @@
 <div id="root">
     <main>
         <div class="center-img">
-            <img src="../media/006-vacations.png" alt="Girl in a jacket" width="200" height="210"/>
+            <img src="006-vacations.png" alt="Girl in a jacket" width="200" height="210"/>
         </div>
         <div id="register-header"><h1> Register</h1>
             <h3>Let's get you enrolled :)</h3>
