making logout button actually logout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="js/misc.js"></script>
     <script src="js/vacation.js"></script>
     <script src="js/bedarf.js"></script>
+    <script src="js/login.js"></script>
     <script src="js/main.js" defer></script>
     <title>Self-Service</title>
   </head>
@@ -28,9 +29,8 @@
           <span class="material-icons" onclick="VMView.display()">dvr</span>
           <a>Bedarf</a>
         </div>
-        <span class="material-icons" onclick="window.location.href = 'login/index.html';" >logout</span> 
+        <span class="material-icons" onclick="setCookie('JWT', '', 1);window.location.href = 'login/'" >logout</span> 
       </div>
-      
       
       <div id="content">
         <h1></h1>
