--- a/new_vm/index.html
+++ b/new_vm/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <script src="../js/bedarf-stellen.js" defer></script>
-
+    <script src="../js/login.js"></script>
     <title>Self-Service</title>
 </head>
 <body>
@@ -20,8 +20,8 @@
         <div id="request-header"><h2>Neue VM beantragen</h2></div>
         <form id="form-vm" >
             <div class="container">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email">
+<!--                <label for="email">Email</label>-->
+<!--                <input type="email" name="email" id="email">-->
                 <br>
                 <br>
 
